--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+.taskForm{
+  margin: auto;
+  width: 80%;
+}
+
+.container{
+  width: 100px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+#status{
+  margin: 5px;
+  margin-top: 20px;
+}
+
+.btn{
+  float: inline-end;
+  margin: 5px;
+}
+
+table {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+th, td {
+  vertical-align: middle;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+tbody tr:hover {
+  background-color: #e0e0e0;
 }
 
-.App-link {
-  color: #61dafb;
+.complete td span{
+  color: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskForm h2{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-image: url('/src/Images/buddha-colorful.jpg');
+  color: beige;
+  text-align: center;
+  text-transform: uppercase;
+  background-repeat: repeat; 
+  -webkit-background-clip: text; 
+  -webkit-text-fill-color: transparent; 
+  
 }
